mule-fundamentals/v/3.7/anypoint-exchange.adoc
= Anypoint Exchange
:keywords: exchange, content types

link:https://www.mulesoft.com/exchange[Anypoint Exchange] is a discovery interface (UI and API) where you can find Anypoint Connectors, Templates, Examples, and API descriptions in link:http://raml.org[RAML] and WSDL that help make the adoption of the Anypoint Platform a lot easier and faster for you.

Anypoint Exchange provides public official Mulesoft content that you can access using Anypoint Studio or from the MuleSoft website as soon as it is published. You can also publish private content to it through your Anypoint Platform organization that is shared only among the members of your organization.

[NOTE]
====
An *on-premises version of the Exchange* is available with the link:/anypoint-platform-on-premises/v/1.0/[Anypoint Platform On-Premises]. Although this is the same product, there are some differences and limitations:

* Anypoint Exchange on-premises does not allow users to access the MuleSoft tenant available on the cloud, and thus is shipped with no default content.
* The Exchange Onprem is currently not accessible via Anypoint Studio.
====

== Types of Content

Both the public and private content in Exchange can consist of the following kinds of elements:

*Connectors* facilitate easy integration of your Mule applications with third-party APIs and standard integration protocols. Use them within your application's flows to send and receive data via a protocol or specific API. Anypoint Studio comes bundled with a large set of connectors, but in the Exchange are many more.

*APIs* are RAML files that describe an API's structure, they can be referenced by an link:/mule-user-guide/v/3.7/http-request-connector[HTTP Request Connector] to expose metadata to Studio.

*Examples* are Mule projects that explain what the elements are in Studio and how they work together to achieve certain objectives.

*Templates* are projects that cover typical enterprise integration use cases. Find one that performs what you need, provide it user credentials, and it should be good to deploy! You can also customize or extend templates as needed. All the templates in the Exchange are built based on one of these data link:http://blogs.mulesoft.org/tag/integration-patterns/[integration patterns]:

[cols=",,,,",]
|===
|*http://blogs.mulesoft.org/data-integration-patterns-migration/[Migration]* |*http://blogs.mulesoft.org/data-integration-patterns-broadcast/[Broadcast]* |*http://blogs.mulesoft.org/data-integration-patterns-bi-directional-sync/[Bi-Directional Sync]* |*http://blogs.mulesoft.org/data-integration-patterns-aggregation/[Aggregation]* |*http://blogs.mulesoft.org/data-integration-patterns-correlation/[Correlation]*
|image:sync.png[sync] |image:salesforce-integration-templates-broadcast.png[salesforce-integration-templates-broadcast] |image:bisync.png[bisync] |image:salesforce-integration-templates-aggregate.png[salesforce-integration-templates-aggregate] |image:salesforce-integration-templates-synchronize.png[salesforce-integration-templates-synchronize]

|===

The examples and templates categories depend on the purpose for which each project is built: templates are almost ready to use just-add-water solutions, while examples are intended to increase your understanding of Studio elements and to build your own solution. Of course, if it suits your needs you could also end up using an example as a starting point for an actual deployable project or a template as a tool for understanding concepts.

== Accessing the Exchange's Public Content

There are several ways to access the Exchange.

* From the icon in the Anypoint Studio toolbar: +
image:exchange+icon.png[exchange+icon]

* By searching for a connector that you don't have in your palette, and clicking *Search the Exchange for _<connector>_* : +
image:exchange+search.png[exchange+search]

* Through Anypoint Studio's drop-down menu:  *File* > *New* > *Project From Template*
* On the link:/mule-user-guide/v/3.7/http-request-connector[HTTP Request Connector] 's global element, through the link *Search RAML Exchange*
* Through the link:http://mulesoft.com/exchange[Exchange website]  +

== Navigating Anypoint Exchange

You can search https://www.mulesoft.com/exchange#!/[Anypoint Exchange] using tags and keywords for a name, summary, description, and tags of the items. Each element is tagged with labels that refer to a version, the Mule Runtime versions it supports, etc. These are also organized by pattern so you can scan through only those that perform what you're interested in.

image:Exchange.png[Exchange]

* Click *View Details* to read a brief overview of the project and access more options.
* Click *Download* to directly download the project or connector to your Studio workspace and open it in Studio.

For APIs you can also view the API's link:/anypoint-platform-for-apis/engaging-users-of-your-api[API Portal.]

Every piece of content, regardless of its type, has a rating associated to it. This rating is displayed next to the element once it has received two or more ratings.

[NOTE]
You can only submit a rating if you have entered the Exchange through Anypoint Studio. If you're rating a Connector, you also need to have it installed in Anypoint Studio in order to rate it.

== Installing a Connector from Anypoint Exchange

[NOTE]
Some connectors may be viewable via Exchange but not yet installable through it, they soon will be. If the connector you need is not yet available for installation in Exchange, you can install it using the link:/mule-user-guide/v/3.7/installing-connectors[install new software] menu.

The basic steps for installing Connectors from Exchange into Studio:

. Find the Connector that you need and click *Install*. Make sure the connector is compatible with the Mule runtime you want to build projects for.
+
image:connector.png[connector]

. Accept the terms and conditions and follow through the wizard, then allow Studio to restart.
. The downloaded connector is then available in the canvas:
+
image:on+palette.png[on+palette]

== Opening an Example From Exchange

Below are the basic steps for implementing any of the Examples in Exchange.

. Find the example that best suits your needs and click *View details:*
+
image:exchange+1.png[exchange+1]
+

. In the XML code are graphic representations of how this implementation looks in Studio, explanatory diagrams, and more.
. Click *Open in Studio* to import it into Studio as a new project
. The project is then available in your package explorer. Take a look at the files it contains. The main XML file under `src/main/app` should automatically be opened in your canvas.
+
image:example+on+package+explorer.png[example+on+package+explorer]

. If there are any connectors in the project that require that you provide specific user credentials, enter the connector's properties editor, and fill in these fields.
. The example is now complete! You can deploy it to see what's its outcome, run it on link:/mule-user-guide/v/3.7/studio-visual-debugger[debug mode] to examine what occurs with the Mule Message on each step, or modify it at will.

== Implementing a Template From Exchange

Below are the basic steps for implementing any of the Templates in Exchange

. Find the template that best suits your needs and click *Open in Studio*
+
image:exchange+2.png[exchange+2]

. You can now see this project available in your package explorer, take a look at the files it contains:
+
image:package+explorer.png[package+explorer]
+
[NOTE]
When you first open the project it may be marked as having errors, these should simply refer to the fact that the connectors being used in it need to be configured with your user credentials to work.
. Open the `mule-project.xml` file, located directly in the root level of the project folder, if you wish to deploy your app to any environment other than `dev`, change the value of the `mule.env` parameter.
+
image:mule.env.png[mule.env]
+
. All templates in exchange come built in so that to make them work, all you need to do is include your credentials in the configuration files. All of the connectors and global elements in the project's flows reference the fields in these configuration files, so (unless you plan on expanding or customizing how the template works) you never really need to modify or even look at anything other than these files.
+
image:environments.png[environments] 
+
Under the `src/main/resources` folder, find the file that corresponds to the environment that you selected for deploying in the previous step, then open it.
. Provide a value for each of the fields that the configuration file expects, this may include user credentials, port numbers, callback URLs, etc.
. To test your app, save the project and deploy it to Anypoint Studio's embedded run time by clicking the dropdown menu next to the `play` button and selecting the project out of the list.
+
image:play.png[play]

. Now your app is now ready to link:/mule-fundamentals/v/3.7/deploying-mule-applications[Deploy].

== Referencing a RAML File

When using the link:/mule-user-guide/v/3.7/http-request-connector[HTTP Request Connector], you can reference a link:http://raml.org[RAML] file, which makes configuring the connector and the rest of your flow extremely easy. By referencing the RAML file, the connector offers you smart autocomplete options based on how the RAML file describes the available resources, methods and parameters. The metadata that the connector exposes can help you map it to other elements and reference its outputs elsewhere in the flow.

. In an *HTTP Request Connector*'s properties editor, click the green plus sign next to Connector Configuration to create a Global Configuration Element for it.
. In the *General* tab, provide a *RAML Location*. You can reference a file stored in your local system, or you can use the Exchange to browse a list of public APIs that have published their RAML definitions by clicking on *Search RAML in Exchange*:
+
image:raml+library.png[raml+library]

. Navigate the Exchange and look for the API you wish to connect to. You can either click the *View Details* button to read more about that API and RAML definition, or you can click *Add* to make your HTTP Connector reference it.

== Submitting Your Private Content to Exchange

If you have an Anypoint Platform account, your organization can share all of the supported items privately in the Exchange that is accessible via the Anypoint Platform. This is especially useful when you want to share resources among departments in an organization. The Exchange is an easily searchable repository where you can catalog and describe the elements you want to share, together with version compatibility information and links to downloadable files and reference material.

[NOTE]
The Exchange does not host any of your private files, it only links to them. This means that if you want to make a Mule Project or a Connector easily downloadable through your Exchange, you must host these elsewhere through an HTTP service.

=== Permissions

All users in your organization can view items published in the Exchange. However, to create, publish, update, or delete elements from your organization's Exchange, a user must first be given the appropriate permissions within the organization.

==== Adding Exchange Permissions

No users have permissions to submit items by default, not even organization administrators. If you are an organization administrator, it's easy to add a user to a role where they can submit items. In your Anypoint Platform page, click the *gear icon* on the top right to go to the account options, then pick the *Roles* tab. This displays a table with a set of roles for various different tools, only two of which are relevant to the Exchange:

* Exchange Contributors
* Exchange Administrators

To add users to these roles, click on either of them, then click the *Add a user* green button and enter the username. The user is assigned Exchange permissions and can submit items.

==== Scopes of Exchange Permissions

An *Exchange Contributor* submits his content to the Exchange, however this content remains unpublished and is only visible to him and to administrators until an administrator chooses to set the status of this contribution to *published*. He also can see all of the published content from others, but not edit or delete any of it.

An *Exchange Adminstrator* can publish his own and other user's unpublished content to the Exchange, where it is visible to everyone in the organization. He is able to see, edit, or delete any of the content from others, whether it's published or not.

=== Submitting to the Exchange

To submit an entry to the Exchange, click the *Submit Item* button on the top left, then pick the type of item you want to submit out of the drop down list, each kind of item  offers a submission form with different fields.

image:submit.png[submit]

Whatever type of Exchange entry you're creating, you can include a description and even embed a YouTube video to provide more information about your entry. You can also add different tags to your entry to make it easier to find in the Exchange.

You can also include an Author name and a corresponding image to optionally display on your content. This can be useful when your organization has many contributors and partners.  This section is hidden if not filled out.

Keep in mind that after submitting an item, it is added to the Exchange with an *unpublished* status, which makes it only visible to yourself and administrators. If your user owns an Exchange Administrator role, you can easily publish it by opening the Exchange entry through the *View Details* button and clicking the *Publish* button.

image:publish.png[publish]

==== Templates and Examples

Templates and examples are both submitted to the Exchange in the same way. You can add multiple template versions to work with different Mule runtime versions, just click the *Add Versions* button and then *Done* after filling in the version information. For each version you add, you have three options for linking to the Mule Project itself:

* *Download*: Link to an HTTP address where you host your Mule deployable zip file. Other people on your organization see a *Download* button on the Exchange entry, which allows them to import the project to Studio with one click.
* *Link*: Link to an external address, where they might be able to download the file and import it into studio manually.
* *No link*: Don't provide a link, your Exchange entry only contains a description.

For your project to be automatically importable into Studio via the Exchange, it must be packaged into a *.zip* file that must be structured in a particular way.

If you use the *January 2015 - Update Site 1* version of Anypoint Studio or newer, exporting your project already produces a zip file that has the necessary structure. To expose your Mule Project on the Exchange:

* Select *File* > *Export*
* Then pick Mule > *Anypoint Studio Project to Mule Deployable Archive (includes Studio metadata)* +
image:export.png[export]

* Follow the remaining steps in the wizard to provide a name and location for your exported file
* Host resulting .zip file in an HTTP server
* Submit an example or template to your Exchange, add a version and reference this HTTP address in it

==== Connectors

If you produce your own home-grown connectors with DevKit, you can share them among your organization as well through your Exchange.

You can add multiple connector versions to work with different Mule runtime versions, just click the *Add Versions* button and then *Done* after filling in the version information. For each version you add, you have three options for linking to the connector itself:

* *Install*: Reference a *Feature ID*, which points to an update site where the connector can be downloaded from. Currently, other people won't be able to download the privately published connector directly, as they can with public connectors. This feature will be provided in the future. For the time being, you must link to an address where they can download the connector.
* *Link*: Link to an external address, where perhaps they may be able to download the file and import it into Studio manually.
* *No link*: Don't provide a link; your Exchange entry only contains a description.

You can also link to specific documentation for each version of your connector, referenced separately on each version.

How to install a downloaded connector in Anypoint Studio

===== Installing a Connector in Anypoint Studio

. Under the `Help` menu in *Anypoint Studio*, click `Install New Software`. 
. Click *Add* next to the *Work with* field, then enter the following values:
.. *Name:* A name to display your connector in the pallette.
.. *Location*: the filepath of your connector's *update-site.zip* file (inside the `target` folder) prepended with `file:/`.
+
image:import2.png[import2]
+
. In the table below the filter field (see image below), use the checkboxes to select your connector (click to expand the folders to select individual items), then click *Next*.
+
image:import3.png[import3]
+
. Review the details of the item you selected, then click *Next*.
. Click to accept terms and conditions of the product, then click *Finish*.
. Click *Restart Now* to complete the installation.  
. After Studio restarts, expand the Cloud Connectors palette group to see your new Hello Connector.
+
image:using1.png[using1]

==== RAML APIs

If you have a link:http://raml.org[RAML] definition file that describes your API, or if you have an API Portal to document it interactively, you can expose these to others in your organization using Exchange. If someone in your organization wants to connect to your API via the link:/mule-user-guide/v/3.7/http-request-connector[HTTP Request Connector] in Anypoint Studio, referencing the API's RAML file exposes the API's metadata, making integration a lot easier. See the Reference a RAML File section above for more information. If your API is registered in the Anypoint Platform for APIs, you can also link to its portal from the Exchange, which provides very versatile interactive tools for easing your internal user's engagement with it.

To add multiple API versions to your Exchange entry, just click the *Add Versions* button, and then *Done* after filling in the version information. For each version you add, also include:

* A link to the API's *RAML* definition file
* A link the the API's *Portal* on the Anypoint Platform for APIs

==== WSDL APIs

If you have a WSDL definition file that describes your API, you can expose it to others in your organization using Exchange. If someone in your organization wants to connect to your API via the link:/mule-user-guide/v/3.7/web-service-consumer[Web Service Consumer] in Anypoint Studio, referencing the API's WSDL file exposes the API's metadata, making integration a lot easier.

To add multiple API versions to your Exchange entry, just click the *Add Versions* button, and then *Done* after filling in the version information. For each version you add, also include a link to the API's *WSDL* definition file

== See Also

* Learn the different ways you can link:/mule-fundamentals/v/3.7/deploying-mule-applications[Deploy] your app.
* Read a link:http://blogs.mulesoft.org/anypoint-templates-database-intro/[Blog Post] and link:http://blogs.mulesoft.org/connected-company-part-1-salesforce-integration-templates/[Another One] about templates that center around Salesforce.
